--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Vue.js Vite Example</title>
+    <title>Timata</title>
     <meta content="initial-scale=1.0, width=device-width" name="viewport" />
-    <link href="/favicon-196.png" rel="icon" />
+    <link href="assets/timata-logo.svg" rel="icon" />
   </head>
   <body>
     <div id="app"></div>
